# nanochatkwizzle

./: .gitignore  GEMINI.md  README.md  analytics.jsonl  chat_ollama_rag.py  check_env.py  debug_server.py  definitive_patch.py  emergency_patch.py  emergency_patch_v2.py  extreme_check.py  extreme_check_v3.py  extreme_check_v5.py  extreme_patch.py  extreme_patch_v10.py  extreme_patch_v11.py  extreme_patch_v12.py  extreme_patch_v13.py  extreme_patch_v14.py  extreme_patch_v15.py  extreme_patch_v16.py  extreme_patch_v17.py  extreme_patch_v2.py  extreme_patch_v3.py  extreme_patch_v4.py  extreme_patch_v5.py  extreme_patch_v6.py  extreme_patch_v7.py  extreme_patch_v8.py  extreme_patch_v9.py  final_check.py  final_check_v2.py  final_check_v3.py  final_check_v4.py  final_check_v5.py  final_check_v6.py  final_patch.py  final_patch_v2.py  final_patch_v3.py  nanochat_start.sh  (+14 more)
.cursor/rules/: wandb-project-agent.mdc
artifacts/run-k9head2f-events:v0/: events_0000.parquet
dev/: browser_data_dummy.jsonl  browser_training_schema.md  gen_synthetic_data.py  rag_sample_corpus.txt  rag_technical_specification.md
migrations/: 001_initial.sql
nanochat/: __init__.py  browser_tool.py  checkpoint_manager.py  common.py  core_eval.py  dataloader.py  dataset.py  engine.py  gpt.py  loss_eval.py  netutil.py  project_analysis.py  tokenizer.py  ui.html
nanochat/db/: __init__.py  models.py  repository.py  session.py
runs/: custom_small.sh  nanobot.sh  speedrun.sh
scripts/: base_eval.py  base_train.py  chat_rl.py  chat_sft.py  chat_web.py  seed_db.py  tok_eval.py  tok_train.py  wandb_download_artifact.py  wandb_project_analysis.py
tasks/: customjson.py
tests/: test_dataloader_user_resume.py  test_db_repository.py  test_engine.py  test_gpt_window_pattern.py  test_nanochat_dtype_env.py  test_netutil_port.py  test_project_analysis.py  test_wandb_artifact_path.py  test_wandb_config.py
