[project]
name = "nanochat"
version = "0.1.0"
description = "the minimal full-stack ChatGPT clone"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "datasets>=4.0.0",
    "fastapi>=0.117.1",
    "httpx>=0.27.0",
    "ipykernel>=7.1.0",
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "playwright>=1.50.0",
    "psutil>=7.1.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.2",
    "regex>=2025.9.1",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "scipy>=1.15.3",
    "sqlalchemy[asyncio]>=2.0.36",
    "setuptools>=80.9.0",
    "tabulate>=0.9.0",
    "tiktoken>=0.11.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "tokenizers>=0.22.0",
    "torch==2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.36.0",
    "wandb>=0.21.3",
    "zstandard>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/kwizzlesurp10-ctrl/nanochatkwizzle"
Repository = "https://github.com/kwizzlesurp10-ctrl/nanochatkwizzle"
Upstream = "https://github.com/karpathy/nanochat"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# target torch to cuda 12.8 or CPU
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
cpu = [
    "torch==2.9.1",
]
gpu = [
    "torch==2.9.1",
]
rag = [
    "chromadb>=1.0.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]
